kubernetes/networking/gateways/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-https
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.5.16
  listeners:
    - protocol: HTTPS
      port: 443
      name: web-gw
      hostname: "*.mcmumf.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "mcmumf.dev-tls"
            kind: Secret
